--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.gradient-text {
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(90deg, #0284c7, #a7f3d0);
+}
+
 @layer utilities {
   @variants responsive {
     .no-scrollbar::-webkit-scrollbar {
