complete initial layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,5 +10,5 @@ html {
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(90deg, #ff6d60, #f7d060);
+  background-image: linear-gradient(90deg, #ff6d60, #ffb000);
 }
