add forntend mentor project

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,5 +10,5 @@ html {
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(90deg, #8ecddd, #d2de32);
+  background-image: linear-gradient(90deg, #277589, #d2de32);
 }
