--- a/app/globals.css
+++ b/app/globals.css
@@ -87,9 +87,9 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(26.03% 0 0);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: oklch(30.52% 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
@@ -99,7 +99,7 @@
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(70.7% 0.022 261.325);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: oklch(100%, 0%, 89.876%);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
