--- a/app/globals.css
+++ b/app/globals.css
@@ -40,9 +40,9 @@
 }
 
 .dark {
-  --background: oklch(26.03% 0 0);
+  --background: oklch(0.208 0 0);
   --foreground: oklch(0.95 0 0);
-  --card: oklch(0.15 0 0);
+  --card: oklch(0.28 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.1 0 0);
   --popover-foreground: oklch(0.95 0 0);
